# qiskit-qir

./: .bumpversion.cfg  .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  NOTICE.txt  README.md  azure-pipelines.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.ado/: ci.yml  release.yml
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  readme.rst  usage.rst
qiskit_qir/: CONTRIBUTING.rst  HISTORY.rst  __init__.py  setup.py
qiskit_qir/.github/: ISSUE_TEMPLATE.md
qiskit_qir/docs/: Makefile
qiskit_qir/tests/: test_qiskit_qir.py
src/qiskit_qir/: __init__.py  capability.py  elements.py  translate.py  visitor.py
tests/: __init__.py  conftest.py  test_batching.py  test_c_if.py  test_capabilities.py  test_output.py  test_profiles.py  test_qiskit_qir.py  test_utils.py
tests/resources/: test_single_clbit_variations_falsy.ll  test_single_clbit_variations_truthy.ll  test_single_register_index_variations_falsy.ll  test_single_register_index_variations_truthy.ll  test_single_register_variations_falsy.ll  test_single_register_variations_truthy.ll  test_two_bit_register_variations_falsy.ll  test_two_bit_register_variations_three.ll  test_two_bit_register_variations_truthy.ll  test_two_bit_register_variations_two.ll
tests/test_circuits/: __init__.py  basic_circuits.py  basic_gates.py  control_flow_circuits.py  random.py
