[metadata]
name = qiskit-qir
version = 0.1.0b10
author = Microsoft
author_email = que-contacts@microsoft.com
description = Qiskit to QIR translator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/msr-quarc/qiskit-qir
project_urls =
	Bug Tracker = https://github.com/msr-quarc/qiskit-qir
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: Microsoft
	Operating System :: MacOS
	Operating System :: Unix

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.7
install_requires =
	qiskit >= 0.34.2
	qiskit-terra>=0.19.2
	pyqir-generator >= 0.4.0a1

[options.extras_require]
test = pytest

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
