[metadata]
name = qiskit-qir
version = 0.5.0rc1
author = Microsoft
author_email = que-contacts@microsoft.com
description = Qiskit to QIR translator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microsoft/qiskit-qir
project_urls =
	Bug Tracker = https://github.com/microsoft/qiskit-qir
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Operating System :: Microsoft
	Operating System :: MacOS
	Operating System :: Unix

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.8
install_requires =
	qiskit>=1.0.0,<2.0
	pyqir>=0.10.0,<0.11.0

[options.extras_require]
test = pytest

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
